fix overflow android

--- a/css/main.css
+++ b/css/main.css
@@ -88,7 +88,7 @@ html:has(#dark:checked) body {
 html {
     height: 100%;
     overflow: hidden;
-    overscroll-behavior: auto;
+    overscroll-behavior: auto !important;
 }
 
 body {
